added project images and repharased texts

--- a/index.html
+++ b/index.html
@@ -26,20 +26,6 @@
       rel="stylesheet"
     />
 
-    <!-- Favicon
-    ================================================== -->
-    <!-- <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/img/apple-touch-icon.png"
-    /> -->
-    <!-- <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/img/favicon.png"
-    /> -->
-
     <!-- Stylesheets
     ================================================== -->
     <!-- Bootstrap core CSS -->
@@ -49,11 +35,7 @@
     <link href="assets/css/style.css" rel="stylesheet" />
     <link href="assets/css/responsive.css" rel="stylesheet" />
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
   </head>
   <body>
     <header
@@ -112,18 +94,7 @@
               > -->
               <p class="job-title">London, UK</p>
 
-              <!-- <a
-                href="https://www.linkedin.com/in/hatice-nazli-ozturk-b093b3118/"
-                target="_blank"
-                class="job-title"
-                >Linkedin</a
-              >
-              <a
-                href="https://github.com/nazilit"
-                target="_blank"
-                class="job-title"
-                >Github</a
-              > -->
+             
 
               <a href="mailto:hnazliayaz@gmail.com" class="btn btn-fill"
                 >Contact me</a
@@ -149,18 +120,13 @@
               <h2>About</h2>
               <img src="assets/img/lines.svg" class="img-lines" alt="lines" />
               <p>
-                Throughout the years, each of my professional experiences has
+                Throughout the years, my professional background had
                 been an opportunity to learn and grow, and has greatly
-                contributed to the Junior Javascript Developer I am today. Check
-                out my full background below to learn more.
+                contributed to the Junior Javascript Developer I am today. I have 
+                a degree in Computer Science as well as work permit in UK under EU Pre-Settled Status.
+                Please check out my full background below to learn more.
               </p>
-              <!-- <a
-                href="http://www.grad.illinois.edu/sites/default/files/pdfs/cvsamples.pdf"
-                class="btn btn-fill"
-                target="_blank"
-                download
-                >Download my cv</a
-              > -->
+
             </div>
           </div>
         </div>
@@ -275,22 +241,27 @@
             </div>
             <div class="col-sm-4">
               <div class="service">
-                <img src="assets/img/front-end.svg" alt="Front End Developer" />
-                <h4>Front-end</h4>
+                <img src="assets/img/back-end.svg" alt="Back End Developer" />
+                <h4>Back-end</h4>
                 <p>
-                  As a junior javascript developer, I have experience javascript
-                  MVC frameworks such as React
+                  I've been improving my BackEnd skills with NodeJS technologies
+                  with RESTful APIs and encouraging myself to be involved with GraphQL 
+                  as well. I have chosen ExpressJS as a starting point, yet I have other 
+                  achievements to be reached such as NestJS. I really enjoy working with
+                  MongoDB/Mongoose but I am not ready to give up on SQL anytime soon when 
+                  it fits the purpose! Any puzzle in abstract backend world excites me.
                 </p>
               </div>
               <!-- /.service -->
             </div>
             <div class="col-sm-4">
               <div class="service">
-                <img src="assets/img/back-end.svg" alt="Back End Developer" />
-                <h4>Back-end</h4>
+                <img src="assets/img/front-end.svg" alt="Front End Developer" />
+                <h4>Front-end</h4>
                 <p>
-                  I've written REST API's providing data for my front-end
-                  proejects.
+                  I have been exploring JavaScript FrontEnd technologies such as ReactJS. 
+                  I love developing projects with React Hooks and have some backlog frameworks
+                  in my list for instance NextJs.
                 </p>
               </div>
               <!-- /.service -->
@@ -300,10 +271,11 @@
                 <img src="assets/img/consultancy.svg" alt="Coding" />
                 <h4>Experience</h4>
                 <p>
-                  I have 5 years experiences as a Business Analyst. I'd been
-                  looking for career growth since first lockdown and I took the
-                  advantages I've started development last years in June after
-                  my language course finished.
+                  I am a former Buesiness Analyst with 5 years experiences. I'd been
+                  looking for a new career challenge since the Covid-19 lockdown and 
+                  my relocation to London! I've had a chance to attend to an English school
+                  whilst I've been studying JavaScript technologies and I've been following my
+                  passion since then.
                 </p>
               </div>
               <!-- /.service -->
@@ -322,7 +294,7 @@
           <div class="row">
             <div class="col-md-4 col-xs-6">
               <div class="portfolio-item">
-                <img src="assets/img/Portfolio-1.jpg" class="img-res" alt="" />
+                <img src="assets/img/recipeBox.png" class="img-res" alt="" />
                 <div class="portfolio-item-info">
                   <h4>Recipe Box</h4>
                   <a href="#" data-toggle="modal" data-target="#portfolioItem1"
@@ -340,13 +312,13 @@
             </div>
             <div class="col-md-4 col-xs-6">
               <div class="portfolio-item">
-                <img src="assets/img/Portfolio-2.jpg" class="img-res" alt="" />
+                <img src="assets/img/notebook.png" class="img-res" alt="" />
                 <div class="portfolio-item-info">
-                  <h4>Todo</h4>
+                  <h4>Notebook</h4>
                   <a href="#" data-toggle="modal" data-target="#portfolioItem2"
                     ><span class="glyphicon glyphicon-eye-open"></span
                   ></a>
-                  <a href="https://todo-0906.herokuapp.com/" target="_blank"
+                  <a href="https://notebook-0906.herokuapp.com/" target="_blank"
                     ><span class="glyphicon glyphicon-link"></span
                   ></a>
                 </div>
@@ -356,7 +328,7 @@
             </div>
             <div class="col-md-4 col-xs-6">
               <div class="portfolio-item">
-                <img src="assets/img/Portfolio-3.jpg" class="img-res" alt="" />
+                <img src="assets/img/quotes.png" class="img-res" alt="" />
                 <div class="portfolio-item-info">
                   <h4>Quotes</h4>
                   <a href="#" data-toggle="modal" data-target="#portfolioItem3"
@@ -370,48 +342,7 @@
               </div>
               <!-- /.portfolio-item -->
             </div>
-            <div class="col-md-4 col-xs-6">
-              <div class="portfolio-item">
-                <img src="assets/img/Portfolio-4.jpg" class="img-res" alt="" />
-                <div class="portfolio-item-info">
-                  <h4>Project Title</h4>
-                  <a href="#" data-toggle="modal" data-target="#portfolioItem4"
-                    ><span class="glyphicon glyphicon-eye-open"></span
-                  ></a>
-                  <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                </div>
-                <!-- /.portfolio-item-info -->
-              </div>
-              <!-- /.portfolio-item -->
-            </div>
-            <div class="col-md-4 col-xs-6">
-              <div class="portfolio-item">
-                <img src="assets/img/Portfolio-5.jpg" class="img-res" alt="" />
-                <div class="portfolio-item-info">
-                  <h4>Project Title</h4>
-                  <a href="#" data-toggle="modal" data-target="#portfolioItem5"
-                    ><span class="glyphicon glyphicon-eye-open"></span
-                  ></a>
-                  <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                </div>
-                <!-- /.portfolio-item-info -->
-              </div>
-              <!-- /.portfolio-item -->
-            </div>
-            <div class="col-md-4 col-xs-6">
-              <div class="portfolio-item">
-                <img src="assets/img/Portfolio-6.jpg" class="img-res" alt="" />
-                <div class="portfolio-item-info">
-                  <h4>Project Title</h4>
-                  <a href="#" data-toggle="modal" data-target="#portfolioItem6"
-                    ><span class="glyphicon glyphicon-eye-open"></span
-                  ></a>
-                  <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                </div>
-                <!-- /.portfolio-item-info -->
-              </div>
-              <!-- /.portfolio-item -->
-            </div>
+          
           </div>
         </div>
       </section>
@@ -424,48 +355,9 @@
           <div class="row">
             <a href="https://www.linkedin.com/in/hatice-nazli-ozturk-b093b3118/"
               >Linkedin</a
-            >
+            >  |
             <a href="https://github.com/nazilit">Github</a>
           </div>
-
-          <!-- <form>
-            <div class="row">
-              <div class="col-sm-6">
-                <input
-                  type="text"
-                  name="name"
-                  class="form-control mt-x-0"
-                  placeholder="Name"
-                  required
-                />
-              </div>
-              <div class="col-sm-6">
-                <input
-                  type="email"
-                  name="email"
-                  class="form-control"
-                  placeholder="Email"
-                  required
-                />
-              </div>
-              <div class="col-sm-12">
-                <textarea
-                  name="message"
-                  id="mesaage"
-                  class="form-control"
-                  placeholder="Message"
-                  required
-                ></textarea>
-              </div>
-            </div>
-            <button
-              onclick="location.href='mailto:hnazliayaz@gmail.com';"
-              class="btn btn-border"
-              type="submit"
-            >
-              Hire Me <span class="glyphicon glyphicon-send"></span>
-            </button>
-          </form> -->
         </div>
       </section>
       <!-- /.section-form -->
@@ -480,14 +372,14 @@
             <a class="close" data-dismiss="modal"
               ><span class="glyphicon glyphicon-remove"></span
             ></a>
-            <img class="img-res" src="assets/img/Portfolio-1.jpg" alt="" />
+            <img class="img-res" src="assets/img/recipeBox.png" alt="" />
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Recipe Box</h4>
             <p>
               Recipe Box can be used for searching recipe, adding recipe and
               deleting recipe . It has been developed for learning how React and
-              NodeJS works. Which technologies are used?
+              NodeJS works. <br/><br/>Which technologies are used?
             </p>
             <li>React Hooks</li>
             <li>NodeJS(ExpressJS)</li>
@@ -514,13 +406,13 @@
             <a class="close" data-dismiss="modal"
               ><span class="glyphicon glyphicon-remove"></span
             ></a>
-            <img class="img-res" src="assets/img/Portfolio-2.jpg" alt="" />
+            <img class="img-res" src="assets/img/notebook.png" alt="" />
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Todo</h4>
+            <h4 class="modal-title">Notebook</h4>
             <p>
-              Mytodo website can be used for people todo. Todo list can be
-              created,deleted. Which technologies are used?
+              Notebook web application can be used for taking notes. Notes can be
+              created, updated and deleted.<br/><br/>Which technologies are used?
             </p>
             <li>React Hooks</li>
             <li>NodeJS(ExpressJS)</li>
@@ -546,13 +438,13 @@
             <a class="close" data-dismiss="modal"
               ><span class="glyphicon glyphicon-remove"></span
             ></a>
-            <img class="img-res" src="assets/img/Portfolio-3.jpg" alt="" />
+            <img class="img-res" src="assets/img/quotes.png" alt="" />
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Quotes</h4>
             <p>
               Every time when it's clicked or refreshed you can get new quote.
-              Which technologies are used?
+             <br/><br/>Which technologies are used?
             </p>
             <li>React Hooks</li>
             <li>NodeJS(ExpressJS)</li>
@@ -568,101 +460,6 @@
     </div>
     <!-- /.modal -->
 
-    <div id="portfolioItem4" class="modal fade" role="dialog">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <a class="close" data-dismiss="modal"
-              ><span class="glyphicon glyphicon-remove"></span
-            ></a>
-            <img class="img-res" src="assets/img/portfolio-4.jpg" alt="" />
-          </div>
-          <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-              commodo finibus tristique. Maecenas dignissim condimentum sem eu
-              tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut
-              urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet
-              turpis facilisis consectetur quis vel ante. Integer in massa ut
-              nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante
-              placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor
-              non hendrerit.
-            </p>
-          </div>
-          <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
-          </div>
-        </div>
-        <!-- /.modal-content -->
-      </div>
-      <!-- /.modal-dialog -->
-    </div>
-    <!-- /.modal -->
-
-    <div id="portfolioItem5" class="modal fade" role="dialog">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <a class="close" data-dismiss="modal"
-              ><span class="glyphicon glyphicon-remove"></span
-            ></a>
-            <img class="img-res" src="assets/img/portfolio-5.jpg" alt="" />
-          </div>
-          <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-              commodo finibus tristique. Maecenas dignissim condimentum sem eu
-              tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut
-              urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet
-              turpis facilisis consectetur quis vel ante. Integer in massa ut
-              nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante
-              placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor
-              non hendrerit.
-            </p>
-          </div>
-          <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
-          </div>
-        </div>
-        <!-- /.modal-content -->
-      </div>
-      <!-- /.modal-dialog -->
-    </div>
-    <!-- /.modal -->
-
-    <div id="portfolioItem6" class="modal fade" role="dialog">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <a class="close" data-dismiss="modal"
-              ><span class="glyphicon glyphicon-remove"></span
-            ></a>
-            <img class="img-res" src="assets/img/portfolio-6.jpg" alt="" />
-          </div>
-          <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-              commodo finibus tristique. Maecenas dignissim condimentum sem eu
-              tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut
-              urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet
-              turpis facilisis consectetur quis vel ante. Integer in massa ut
-              nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante
-              placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor
-              non hendrerit.
-            </p>
-          </div>
-          <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
-          </div>
-        </div>
-        <!-- /.modal-content -->
-      </div>
-      <!-- /.modal-dialog -->
-    </div>
-    <!-- /.modal -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
