added target blank

--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@
           <div class="modal-footer">
             <a
               href="https://recipe-box-1106.herokuapp.com/"
+              target='_blank'
               class="btn btn-fill"
               >Visit Page</a
             >
@@ -420,7 +421,7 @@
             <li>TypeScript</li>
           </div>
           <div class="modal-footer">
-            <a href="https://todo-0906.herokuapp.com/" class="btn btn-fill"
+            <a href="https://notebook-0906.herokuapp.com/" target='_blank' class="btn btn-fill"
               >Visit Page</a
             >
           </div>
@@ -451,7 +452,7 @@
             <li>MongoDB(Mongoose)</li>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
+            <a href="http://quotes-0906.herokuapp.com/" target="_blank" class="btn btn-fill">Visit Page</a>
           </div>
         </div>
         <!-- /.modal-content -->
