--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
                   with RESTful APIs and encouraging myself to be involved with GraphQL 
                   as well. I have chosen ExpressJS as a starting point, yet I have other 
                   achievements to be reached such as NestJS. I really enjoy working with
-                  MongoDB/Mongoose but I am not ready to give up on SQL anytime soon when 
-                  it fits the purpose! Any puzzle in abstract backend world excites me.
+                  MongoDB/Mongoose lately but also trying to enhance my skills with RDBMS.
+                  Any puzzle in abstract backend world excites me.
                 </p>
               </div>
               <!-- /.service -->
@@ -261,7 +261,7 @@
                 <p>
                   I have been exploring JavaScript FrontEnd technologies such as ReactJS. 
                   I love developing projects with React Hooks and have some backlog frameworks
-                  in my list for instance NextJs.
+                  in my list for instance NextJS.
                 </p>
               </div>
               <!-- /.service -->
@@ -271,9 +271,9 @@
                 <img src="assets/img/consultancy.svg" alt="Coding" />
                 <h4>Experience</h4>
                 <p>
-                  I am a former Buesiness Analyst with 5 years experiences. I'd been
+                  I am a former Buesiness Analyst with 5 years experience. I'd been
                   looking for a new career challenge since the Covid-19 lockdown and 
-                  my relocation to London! I've had a chance to attend to an English school
+                  my relocation to London. I've had a chance to attend to an English school
                   whilst I've been studying JavaScript technologies and I've been following my
                   passion since then.
                 </p>
@@ -353,10 +353,10 @@
           <h3>Contact</h3>
           <img src="assets/img/lines.svg" class="img-lines" alt="lines" />
           <div class="row">
-            <a href="https://www.linkedin.com/in/hatice-nazli-ozturk-b093b3118/"
+            <a href="https://www.linkedin.com/in/hatice-nazli-ozturk-b093b3118/" target="_blank"
               >Linkedin</a
             >  |
-            <a href="https://github.com/nazilit">Github</a>
+            <a href="https://github.com/nazilit" target="_blank">Github</a>
           </div>
         </div>
       </section>
