--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="row">
           <div class="col-md-4 col-xs-6">
             <div class="portfolio-item">
-              <img src="assets/img/recipeBox.png" class="img-res" alt="" />
+              <img src="assets/img/Portfolio-5.jpg" class="img-res" alt="" />
               <div class="portfolio-item-info">
                 <h4>Recipe Box</h4>
                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span
@@ -265,7 +265,7 @@
           </div>
           <div class="col-md-4 col-xs-6">
             <div class="portfolio-item">
-              <img src="assets/img/notebook.png" class="img-res" alt="" />
+              <img src="assets/img/Portfolio-3.jpg" class="img-res" alt="" />
               <div class="portfolio-item-info">
                 <h4>Employee Management</h4>
                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span
@@ -331,7 +331,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-          <img class="img-res" src="assets/img/recipeBox.png" alt="" />
+          <img class="img-res" src="assets/img/Portfolio-5.jpg" alt="" />
         </div>
         <div class="modal-body">
           <h4 class="modal-title">Recipe Box</h4>
@@ -363,7 +363,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-          <img class="img-res" src="assets/img/notebook.png" alt="" />
+          <img class="img-res" src="assets/img/Portfolio-3.jpg" alt="" />
         </div>
         <div class="modal-body">
           <h4 class="modal-title">Employee Management</h4>
