changed the skills

--- a/index.html
+++ b/index.html
@@ -217,8 +217,7 @@
               <img src="assets/img/front-end.svg" alt="Front End Developer" />
               <h4>Front-end</h4>
               <p>
-                I have been exploring JavaScript FrontEnd technologies such as ReactJS.
-                I love developing projects with React Hooks.
+                I have been exploring JavaScript FrontEnd technologies such as ReactJS for using my API's.
               </p>
             </div>
             <!-- /.service -->
@@ -231,7 +230,7 @@
                 I am a former Business Analyst with 5 years experience. I'd been
                 looking for a new career challenge since the Covid-19 lockdown and
                 my relocation to London. I've had a chance to attend to an English school
-                whilst I've been studying JavaScript technologies and I've been following my
+                whilst I've been studying Java technologies and I've been following my
                 passion since then.
               </p>
             </div>
